Info alinea teksten toegevoegd #6
Tekst met informatie over AD-nieuws toegevoegd.

--- a/index.html
+++ b/index.html
@@ -87,6 +87,23 @@
         </article>
     </section>
 
+    <section class="info-section">
+        <article>
+            <h2>Landelijke Ad-overleggen en Ad-profielen</h2>
+            <p>Lorem ipsum dolor sit amet. Rem galisum galisum ut quam officia aut ipsam quas sed laborum voluptas est mollitia odio a quis tempore. Sit nulla fugiat qui excepturi laborum rem voluptas possimus. Quo eligendi dolorem At expedita voluptatum aut voluptatum accusamus et galisum rerum non vero atque aut ipsam autem et incidunt placeat. Id doloribus quia a voluptas voluptas ut nisi saepe. Est voluptatum amet eum dolorem possimus ea amet repudiandae.</p>
+        </article>
+
+        <article>
+            <h2>Gezamenlijke profilering van vergelijkbare Ad-opleidingen</h2>
+            <p>Lorem ipsum dolor sit amet. Rem galisum galisum ut quam officia aut ipsam quas sed laborum voluptas est mollitia odio a quis tempore. Sit nulla fugiat qui excepturi laborum rem voluptas possimus. Quo eligendi dolorem At expedita voluptatum aut voluptatum accusamus et galisum rerum non vero atque aut ipsam autem et incidunt placeat. Id doloribus quia a voluptas voluptas ut nisi saepe. Est voluptatum amet eum dolorem possimus ea amet repudiandae.</p>
+        </article>
+
+        <article>
+            <h2>Ad-profielen</h2>
+            <p>Lorem ipsum dolor sit amet. Rem galisum galisum ut quam officia aut ipsam quas sed laborum voluptas est mollitia odio a quis tempore. Sit nulla fugiat qui excepturi laborum rem voluptas possimus. Quo eligendi dolorem At expedita voluptatum aut voluptatum accusamus et galisum rerum non vero atque aut ipsam autem et incidunt placeat. Id doloribus quia a voluptas voluptas ut nisi saepe. Est voluptatum amet eum dolorem possimus ea amet repudiandae.</p>
+        </article>
+    </section>
+
     <section class="success-message">
         <button>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check"><circle cx="12" cy="12" r="10"/><path d="m9 12 2 2 4-4"/></svg>
