Hamburger menu toegevoegd #5 #34
Hamburger menu interactie toegevoegd.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <header>
+      <!-- aria-label geeft een naam/beschrijving aan een element -->
+      <div><button class="hamburger-icon" aria-expanded="false" aria-label="Open menu">☰</button></div>
+      <div><a href="index.html"><img width="500px" height="150px" alt="ADConnect logo" class="logo" src="assets/output-onlinepngtools.png"/></a></div>
+      <div class="hamburger-menu">
+        <button class="close-btn" tabindex="-1" aria-label="Sluit menu">✖</button>
+        <ul class="nav">
+          <!-- tab-index -1 om aan te geven dat het niet focusbaar is met tab op laptop -->
+          <li><a href="" tabindex="-1">Home</a></li>
+          <li><a href="" tabindex="-1">Thema's</a></li>
+          <li><a href="" tabindex="-1">Doorstroom</a></li>
+          <li><a href="" tabindex="-1">Documenten</a></li>
+          <li><a href="" tabindex="-1">Lado's & AD-profielen</a></li>
+          <li><a href="" tabindex="-1">AD talent award</a></li>
+          <li><a href="" tabindex="-1">AD-dag</a></li>
+          <li><a href="" tabindex="-1">Nieuws & evenementen</a></li>
+          <li><a href="contact.html" tabindex="-1">Contact</a></li>
+        </ul>
+      </div>
+      <div><button class="search-icon">🔍︎</button></div>
+    </header>
+
+    <hr />
+
     <section class="cards-section">
         <article class="card">
                 <img src="https://fdnd.nl/assets/img/funda.jpg" alt="Vergadering bij Funda">
