Nieuwspagina main-news & light/darkmode colors #6 #18
Main-news content toegevoegd & light/darkmode colors aanpassingen.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
       <div><button class="search-icon">🔍︎</button></div>
     </header>
 
-    <hr />
+    <hr/>
+
+    <section class="main-news">
+        <h1>Laatste nieuws</h1>
+        <img class="main-news-img" src="https://media.istockphoto.com/id/1324706919/video/crowd-people-appearance-multicultural-crowd-of-people-group-of-different-men-and-women-young.jpg?s=640x640&k=20&c=4J83ZXAU1GD0-Qq0eWCA8pOoIzvHnLUPuL5EwX-H_AM=">
+        <p>Lorem ipsum dolor sit amet. Rem galisum galisum ut quam officia aut ipsam quas sed laborum voluptas est mollitia odio a quis tempore. Sit nulla fugiat qui excepturi laborum rem voluptas possimus. Quo eligendi dolorem At expedita voluptatum aut voluptatum accusamus et galisum rerum non vero atque aut ipsam autem et incidunt placeat. Id doloribus quia a voluptas voluptas ut nisi saepe. Est voluptatum amet eum dolorem possimus ea amet repudiandae.</p>
+    </section>
 
     <section class="cards-section">
         <article class="card">
