--- a/index.html
+++ b/index.html
@@ -134,6 +134,41 @@
         </article>
     </section>
 
+    <footer>
+      <h2>Deelnemende hogescholen</h2>
+
+      <div class="school-logos">
+        <div class="school-logos-slide">
+          <img src="/assets/hogescholen4.png">
+          <img src="/assets/hogescholen3.png">
+          <img src="/assets/hogscholen5.png">
+          <img src="/assets/hogescholen6.png">
+          <img src="/assets/hogescholen7.png">
+          <img src="/assets/hogescholen8.png">
+          <img src="/assets/hogescholen9.png">
+          <img src="/assets/hogescholen10.png">
+          <img src="/assets/hogescholen11.png">
+          <img src="/assets/hogescholen12.png">
+        </div>
+      </div>
+
+      <div class="contact">
+        <div class="contact-1">
+          <h4>Overlegplatform Associate degree, dagelijks bestuur:</h4>
+          <p>Roland van der Poel (voorzitter)</p>
+          <p>Carolien van Riswijk</p>   
+          <p>Nina Spithost</p>
+          <p>Maruschka Kinds</p>
+          <p>Demi Blok</p>
+        </div>
+
+        <div class="contact-2">
+          <h4>Contact</h4>
+          <p>platformassociatedegrees@outlook.com</p>
+        </div>
+      </div>
+    </footer>
+
     <section class="success-message">
         <button>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check"><circle cx="12" cy="12" r="10"/><path d="m9 12 2 2 4-4"/></svg>
