--- a/index.html
+++ b/index.html
@@ -31,12 +31,29 @@
 
     <hr/>
 
-    <section class="main-news">
-        <h1>Laatste nieuws</h1>
-        <img class="main-news-img" src="https://media.istockphoto.com/id/1324706919/video/crowd-people-appearance-multicultural-crowd-of-people-group-of-different-men-and-women-young.jpg?s=640x640&k=20&c=4J83ZXAU1GD0-Qq0eWCA8pOoIzvHnLUPuL5EwX-H_AM=">
-        <p>Lorem ipsum dolor sit amet. Rem galisum galisum ut quam officia aut ipsam quas sed laborum voluptas est mollitia odio a quis tempore. Sit nulla fugiat qui excepturi laborum rem voluptas possimus. Quo eligendi dolorem At expedita voluptatum aut voluptatum accusamus et galisum rerum non vero atque aut ipsam autem et incidunt placeat. Id doloribus quia a voluptas voluptas ut nisi saepe. Est voluptatum amet eum dolorem possimus ea amet repudiandae.</p>
+    <section class="main">
+        <article>
+            <h2>Hoofdstuk</h2>
+            <p>Lorem ipsum dolor sit amet. Eos rerum autem et quaerat exercitationem et omnis impedit et sunt dignissimos.</p>
+            <div>
+                <div>
+                    <a>Meer informatie</a>
+                </div>
+                <div>
+                    <img src="https://w7.pngwing.com/pngs/491/992/png-transparent-hogeschool-van-amsterdam-university-of-amsterdam-education-master-s-degree-science-angle-text-logo.png">
+                </div>
+            </div>
+        </article>
+
+        <article>
+            <h2>Hoofdstuk</h2>
+            <p>Lorem ipsum dolor sit amet. Eos rerum autem et quaerat exercitationem et omnis impedit et sunt dignissimos.</p>
+            <a>Meer informatie</a>
+            <img src="https://w7.pngwing.com/pngs/491/992/png-transparent-hogeschool-van-amsterdam-university-of-amsterdam-education-master-s-degree-science-angle-text-logo.png">
+        </article>
     </section>
 
+    <h2>Workshops</h2>
     <section class="cards-section">
         <article class="card">
                 <img src="https://fdnd.nl/assets/img/funda.jpg" alt="Vergadering bij Funda">
