Styling van pagina verbeterd #6
Styling van de pagina aangepast en verbeterd.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section class="main">
         <article>
-            <h2>Hoofdstuk</h2>
+            <h2>Nieuwe <div class="calli">samenwerking</div></h2>
             <p>Lorem ipsum dolor sit amet. Eos rerum autem et quaerat exercitationem et omnis impedit et sunt dignissimos.</p>
             <div>
                 <div>
@@ -46,14 +46,23 @@
         </article>
 
         <article>
-            <h2>Hoofdstuk</h2>
+            <h2>Creatieve <div class="calli">erkenning</div></h2>
             <p>Lorem ipsum dolor sit amet. Eos rerum autem et quaerat exercitationem et omnis impedit et sunt dignissimos.</p>
-            <a>Meer informatie</a>
-            <img src="https://w7.pngwing.com/pngs/491/992/png-transparent-hogeschool-van-amsterdam-university-of-amsterdam-education-master-s-degree-science-angle-text-logo.png">
+            <div>
+                <div>
+                    <a>Meer informatie</a>
+                </div>
+                <div>
+                    <img src="https://w7.pngwing.com/pngs/491/992/png-transparent-hogeschool-van-amsterdam-university-of-amsterdam-education-master-s-degree-science-angle-text-logo.png">
+                </div>
+            </div>
         </article>
     </section>
 
-    <h2>Workshops</h2>
+    <div class="h2-divider">
+        <h2 class="h2-events">Evenementen</h2>
+        <h2 class="bigger-heading"><div class="calli" id="h2-divider-child">Ontmoet. Beleef. Groei.</div></h2>
+    </div>
     <section class="cards-section">
         <article class="card">
                 <img src="https://fdnd.nl/assets/img/funda.jpg" alt="Vergadering bij Funda">
