Color & text-align #6
Kleuren en positioning aangepast.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </article>
     </section>
 
-    <section class="info-section">
+    <section class="info-section" id="p-align">
         <article class="hidden">
             <h2>Landelijke Ad-overleggen en Ad-profielen</h2>
             <p>Lorem ipsum dolor sit amet. Rem galisum galisum ut quam officia aut ipsam quas sed laborum voluptas est mollitia odio a quis tempore. Sit nulla fugiat qui excepturi laborum rem voluptas possimus. Quo eligendi dolorem At expedita voluptatum aut voluptatum accusamus et galisum rerum non vero atque aut ipsam autem et incidunt placeat. Id doloribus quia a voluptas voluptas ut nisi saepe. Est voluptatum amet eum dolorem possimus ea amet repudiandae.</p>
