Linkjes toegevoegd ham-menu #34
Linkjes toegevoegd ham-menu voor de user test.

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <button class="close-btn" tabindex="-1" aria-label="Sluit menu">✖</button>
         <ul class="nav">
           <!-- tab-index -1 om aan te geven dat het niet focusbaar is met tab op laptop -->
-          <li><a href="" tabindex="-1">Home</a></li>
-          <li><a href="" tabindex="-1">Thema's</a></li>
-          <li><a href="" tabindex="-1">Doorstroom</a></li>
-          <li><a href="" tabindex="-1">Documenten</a></li>
-          <li><a href="" tabindex="-1">Lado's & AD-profielen</a></li>
-          <li><a href="" tabindex="-1">AD talent award</a></li>
-          <li><a href="" tabindex="-1">AD-dag</a></li>
-          <li><a href="" tabindex="-1">Nieuws & evenementen</a></li>
+          <li><a href="index.html" tabindex="-1">Home</a></li>
+          <li><a href="index.html" tabindex="-1">Thema's</a></li>
+          <li><a href="index.html" tabindex="-1">Doorstroom</a></li>
+          <li><a href="index.html" tabindex="-1">Documenten</a></li>
+          <li><a href="index.html" tabindex="-1">Lado's & AD-profielen</a></li>
+          <li><a href="index.html" tabindex="-1">AD talent award</a></li>
+          <li><a href="index.html" tabindex="-1">AD-dag</a></li>
+          <li><a href="index.html" tabindex="-1">Nieuws & evenementen</a></li>
           <li><a href="contact.html" tabindex="-1">Contact</a></li>
         </ul>
       </div>
