--- a/index.html
+++ b/index.html
@@ -165,16 +165,16 @@
 
       <div class="school-logos">
         <div class="school-logos-slide">
-          <img src="/assets/hogescholen4.png">
-          <img src="/assets/hogescholen3.png">
-          <img src="/assets/hogscholen5.png">
-          <img src="/assets/hogescholen6.png">
-          <img src="/assets/hogescholen7.png">
-          <img src="/assets/hogescholen8.png">
-          <img src="/assets/hogescholen9.png">
-          <img src="/assets/hogescholen10.png">
-          <img src="/assets/hogescholen11.png">
-          <img src="/assets/hogescholen12.png">
+          <img src="./assets/hogescholen4.png">
+          <img src="./assets/hogescholen3.png">
+          <img src="./assets/hogscholen5.png">
+          <img src="./assets/hogescholen6.png">
+          <img src="./assets/hogescholen7.png">
+          <img src="./assets/hogescholen8.png">
+          <img src="./assets/hogescholen9.png">
+          <img src="./assets/hogescholen10.png">
+          <img src="./assets/hogescholen11.png">
+          <img src="./assets/hogescholen12.png">
         </div>
       </div>
 
