Github live pages overflow fix v2
Fix overflow op Github pages.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section class="main">
         <article>
-            <h2>Nieuwe <div class="calli">samenwerking</div></h2>
+            <h2>Nieuwe <span class="calli">samenwerking</span></h2>
             <p>Lorem ipsum dolor sit amet. Eos rerum autem et quaerat exercitationem et omnis impedit et sunt dignissimos.</p>
             <div>
                 <div>
@@ -46,7 +46,7 @@
         </article>
 
         <article>
-            <h2>Creatieve <div class="calli">erkenning</div></h2>
+            <h2>Creatieve <span class="calli">erkenning</span></h2>
             <p>Lorem ipsum dolor sit amet. Eos rerum autem et quaerat exercitationem et omnis impedit et sunt dignissimos.</p>
             <div>
                 <div>
