Formulier basics opgesteld #40
Basic elementen voor een formulier opgesteld.

--- a/contact.html
+++ b/contact.html
@@ -125,6 +125,22 @@
               </a>
           </div>
         </div>
+
+        <section class="forms">
+            <h2>Stuur ons een bericht</h2>
+            <label>
+                <p>Volledige naam</p>
+                <input type="text" id="name" placeholder="Typ hier uw naam" required>
+            </label>
+            <label>
+                <p>E-mailadres</p>
+                <input type="email" id="email" placeholder="Typ hier uw e-mailadres" required>
+            </label>
+            <label>
+                <p>Bericht</p>
+                <input type="text" id="bericht" placeholder="Typ hier uw bericht" required>
+            </label>
+        </section>
     </main>
 
     <footer>
