Form element & input type submit added #40
Form element toegevoegd en input type submit. Button ook een styling gegeven.

--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
           </div>
         </div>
 
-        <section class="forms">
+        <form>
             <h2>Stuur ons een bericht</h2>
             <label>
                 <p>Volledige naam</p>
@@ -140,7 +140,8 @@
                 <p>Bericht</p>
                 <input type="text" id="bericht" placeholder="Typ hier uw bericht" required>
             </label>
-        </section>
+            <input type="submit" id="button" placeholder="Verzenden">
+        </form>
     </main>
 
     <footer>
