Aria-label added & alt added & heading sequence changed #19
^
|

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a>Meer informatie</a>
                 </div>
                 <div>
-                    <img src="https://w7.pngwing.com/pngs/491/992/png-transparent-hogeschool-van-amsterdam-university-of-amsterdam-education-master-s-degree-science-angle-text-logo.png">
+                    <img src="https://w7.pngwing.com/pngs/491/992/png-transparent-hogeschool-van-amsterdam-university-of-amsterdam-education-master-s-degree-science-angle-text-logo.png" alt="Logo Hogeschool van Amsterdam">
                 </div>
             </div>
         </article>
@@ -53,7 +53,7 @@
                     <a>Meer informatie</a>
                 </div>
                 <div>
-                    <img src="https://w7.pngwing.com/pngs/491/992/png-transparent-hogeschool-van-amsterdam-university-of-amsterdam-education-master-s-degree-science-angle-text-logo.png">
+                    <img src="https://w7.pngwing.com/pngs/491/992/png-transparent-hogeschool-van-amsterdam-university-of-amsterdam-education-master-s-degree-science-angle-text-logo.png" alt="Logo Hogeschool van Amsterdam">
                 </div>
             </div>
         </article>
@@ -66,7 +66,7 @@
     <section class="cards-section">
         <article class="card">
                 <img src="https://fdnd.nl/assets/img/funda.jpg" alt="Vergadering bij Funda">
-                <button class="heart-button">
+                <button class="heart-button" aria-label="Like artikel">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40px" height="40px" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-heart-icon lucide-heart"><path d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"/></svg>
                 </button>
             <div class="panel">
@@ -79,7 +79,7 @@
 
         <article class="card">
                 <img src="https://fdnd.nl/assets/img/funda.jpg" alt="Vergadering bij Funda">
-                <button class="heart-button">
+                <button class="heart-button" aria-label="Like artikel">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40px" height="40px" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-heart-icon lucide-heart"><path d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"/></svg>
                 </button>
             <div class="panel">
@@ -92,7 +92,7 @@
 
         <article class="card">
                 <img src="https://fdnd.nl/assets/img/funda.jpg" alt="Vergadering bij Funda">
-                <button class="heart-button">
+                <button class="heart-button" aria-label="Like artikel">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40px" height="40px" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-heart-icon lucide-heart"><path d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"/></svg>
                 </button>
             <div class="panel">
@@ -105,7 +105,7 @@
 
         <article class="card">
                 <img src="https://fdnd.nl/assets/img/funda.jpg" alt="Vergadering bij Funda">
-                <button class="heart-button">
+                <button class="heart-button" aria-label="Like artikel">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40px" height="40px" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-heart-icon lucide-heart"><path d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"/></svg>
                 </button>
             <div class="panel">
@@ -118,7 +118,7 @@
 
         <article class="card">
                 <img src="https://fdnd.nl/assets/img/funda.jpg" alt="Vergadering bij Funda">
-                <button class="heart-button">
+                <button class="heart-button" aria-label="Like artikel">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40px" height="40px" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-heart-icon lucide-heart"><path d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"/></svg>
                 </button>
             <div class="panel">
@@ -131,7 +131,7 @@
 
         <article class="card">
                 <img src="https://fdnd.nl/assets/img/funda.jpg" alt="Vergadering bij Funda">
-                <button class="heart-button">
+                <button class="heart-button" aria-label="Like artikel">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40px" height="40px" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-heart-icon lucide-heart"><path d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"/></svg>
                 </button>
             <div class="panel">
@@ -165,22 +165,22 @@
 
       <div class="school-logos">
         <div class="school-logos-slide">
-          <img src="./assets/hogescholen4.png">
-          <img src="./assets/hogescholen3.png">
-          <img src="./assets/hogscholen5.png">
-          <img src="./assets/hogescholen6.png">
-          <img src="./assets/hogescholen7.png">
-          <img src="./assets/hogescholen8.png">
-          <img src="./assets/hogescholen9.png">
-          <img src="./assets/hogescholen10.png">
-          <img src="./assets/hogescholen11.png">
-          <img src="./assets/hogescholen12.png">
+          <img src="./assets/hogescholen4.png" alt="Logo's hogescholen 1/10">
+          <img src="./assets/hogescholen3.png" alt="Logo's hogescholen 2/10">
+          <img src="./assets/hogscholen5.png" alt="Logo's hogescholen 3/10">
+          <img src="./assets/hogescholen6.png" alt="Logo's hogescholen 4/10">
+          <img src="./assets/hogescholen7.png" alt="Logo's hogescholen 5/10">
+          <img src="./assets/hogescholen8.png" alt="Logo's hogescholen 6/10">
+          <img src="./assets/hogescholen9.png" alt="Logo's hogescholen 7/10">
+          <img src="./assets/hogescholen10.png" alt="Logo's hogescholen 8/10">
+          <img src="./assets/hogescholen11.png" alt="Logo's hogescholen 9/10">
+          <img src="./assets/hogescholen12.png" alt="Logo's hogescholen 10/10">
         </div>
       </div>
 
       <div class="contact">
         <div class="contact-1">
-          <h4>Overlegplatform Associate degree, dagelijks bestuur:</h4>
+          <h3>Overlegplatform Associate degree, dagelijks bestuur:</h3>
           <p>Roland van der Poel (voorzitter)</p>
           <p>Carolien van Riswijk</p>   
           <p>Nina Spithost</p>
@@ -189,7 +189,7 @@
         </div>
 
         <div class="contact-2">
-          <h4>Contact</h4>
+          <h3>Contact</h3>
           <p>platformassociatedegrees@outlook.com</p>
         </div>
       </div>
